syntax = "proto3";

package lumie;

option java_multiple_files = true;
option java_package = "com.lumie.grpc.tenant";
option java_outer_classname = "TenantProto";

service TenantService {
  rpc GetTenant(GetTenantRequest) returns (TenantResponse);
  rpc GetTenantBySlug(GetTenantBySlugRequest) returns (TenantResponse);
  rpc ValidateTenant(ValidateTenantRequest) returns (ValidateTenantResponse);
}

message GetTenantRequest {
  int64 tenant_id = 1;
}

message GetTenantBySlugRequest {
  string slug = 1;
}

message ValidateTenantRequest {
  string slug = 1;
}

message TenantResponse {
  int64 id = 1;
  string slug = 2;
  string name = 3;
  string status = 4;
  string schema_name = 5;
  string created_at = 6;
  string updated_at = 7;
}

message ValidateTenantResponse {
  bool valid = 1;
  string message = 2;
  int64 tenant_id = 3;
}
